<resources>
    <string name="app_name">TAspesialisBangunan</string>
    <string name="title_activity_produk_maps">Map</string>
    <string name="title_activity_materialuser">MaterialuserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_material_maps">Map</string>
    <string name="title_activity_pelanggan">PelangganActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_button">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profil</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">email</string>
    <string name="Required">Required</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="Email">Email</string>
    <string name="Telepon">Telepon</string>
    <string name="Nama_Toko">Nama Toko</string>
    <string name="content_description_end_icon">content_description_end_icon</string>
    <string name="Nama_Lengkap">Nama Lengkap</string>
    <string name="Kecamatan">Kecamtan</string>
    <string name="Kelurahan">Kelurahan</string>
    <string name="Alamat">Alamat</string>
    <string name="DetailAlamat">Detail alamat rt,rw</string>
    <string name="Telpone">Telpone</string>
    <string name="default_notification_channel_id">SpesialisJB</string>

    <string-array name="list_jenispembuatan">
        <item>Pilih</item>
        <item>Pembuatan Pagar</item>
        <item>Pembuatan Tangga</item>
        <item>Pembuatan Kanopi</item>
        <item>Pembuatan Tralis</item>
    </string-array>

    <string-array name="list_category">
        <item>Pilih Produk</item>
        <item>Produk Jasa</item>
        <item>Produk Material</item>
        <item>Produk Jasa dan Material</item>
    </string-array>

    <string-array name="list_alamat">
        <item>Pilih Kecamatan</item>
        <item>Kecamatan Margadana</item>
        <item>Kecamatan Tegal Barat</item>
        <item>Kecamatan Tegal Selatan</item>
        <item>Kecamatan Tegal Timur</item>

    </string-array>

</resources>