<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.pelanggan.updateprofil.UbahProfilActivity">


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/linubahprofil"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txvInfoUser"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoprofile"
                android:layout_width="@dimen/_97sdp"
                android:layout_height="@dimen/_97sdp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img_add_image"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Foto Profil"
                android:layout_gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:startIconDrawable="@drawable/ic_account_circle_black_24dp"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:helperTextTextColor="@color/merah"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ubahusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Nama_Lengkap"/>

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:startIconDrawable="@drawable/ic_email_black_24dp"-->
<!--                app:startIconContentDescription="@string/content_description_end_icon"-->
<!--                app:helperTextTextColor="@color/merah"-->
<!--                android:layout_marginTop="15dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/edt_ubahemaiil"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:lines="1"-->
<!--                    android:inputType="textEmailAddress"-->
<!--                    android:hint="@string/Email"/>-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:helperTextTextColor="@color/merah"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ubahalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Alamat"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/txvphone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_37sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_btn_lapisanabu">

                <ImageView
                    android:id="@+id/imvphone"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:src="@drawable/ic_phone_android_black_24dp"
                    app:tint="@color/Abuabuhitam" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="@dimen/_1sdp"
                        android:gravity="center"
                        android:text="+62"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/edt_ubahphone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="3dp"
                        android:layout_toEndOf="@+id/imvphone"
                        android:background="@color/white"
                        android:hint="No Telpone"
                        android:inputType="number"
                        android:maxLength="13"
                        android:textSize="14dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_ubah"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="Simpan"
            android:textColor="@color/white"
            app:backgroundTint="@color/birucantik" />

<!--        <ProgressBar-->
<!--            android:id="@+id/progressubah"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"/>-->

    </LinearLayout>


</LinearLayout>